--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'io.github.inflationx:viewpump:2.0.3'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.loopj.android:android-async-http:1.4.9'
