--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:16.5.0'
     implementation 'com.google.android.gms:play-services-cast-framework:16.1.2'
     implementation 'com.github.KhunHtetzNaing:xGetter:1.9.7'
+    implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.ixiDev:GDPRChecker:v0.2'
