--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,6 @@ dependencies {
     implementation 'com.onesignal:OneSignal:3.10.3@aar'
     implementation 'com.google.firebase:firebase-analytics:16.5.0'
     implementation 'com.google.android.gms:play-services-cast-framework:16.1.2'
-    implementation 'com.github.KhunHtetzNaing:xGetter:1.9.7'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
@@ -74,5 +73,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
 }
 apply plugin: 'com.google.gms.google-services'
