--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,6 @@ dependencies {
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'com.facebook.android:audience-network-sdk:5.7.0'
+    implementation 'com.github.KhunHtetzNaing:xGetter:2.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
